<resources>
    <string name="app_name">Data Pasien</string>
    <string name="login">Login</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="button_Login">Login</string>
    <string name="textHome">HOME</string>
    <string name="textMyProfile">My Profile</string>
    <string name="imageFoto">TODO</string>
    <string name="textCont">Contact Me</string>
    <string name="imageMe">TODO</string>
    <string name="textNama">Nama : Rachmawati</string>
    <string name="textNim">Nim : 203110036</string>
    <string name="textProdi">Prodi : RPLA</string>
    <string name="textJenjang">Jenjang : D3</string>
    <string name="imageGrass">TODO</string>
    <string name="imageCloudyy">TODO</string>
    <string name="imageGolden">TODO</string>
    <string name="imageBunga">TODO</string>
    <string name="imageFlower">TODO</string>
    <string name="imageKupu">TODO</string>
    <string name="imageRanting">TODO</string>
    <string name="buttonHome">Home</string>
    <string name="buttonBack">Back</string>
    <string name="imagePurpleFlo">TODO</string>
    <string name="imageFoGrass">TODO</string>
    <string name="imageFloGrass">TODO</string>
    <string name="imageTulip">TODO</string>
    <string name="imagePinkSakura">TODO</string>
    <string name="imageTulipPink">TODO</string>
    <string name="imagePinkTulip">TODO</string>
    <string name="imageGrassFlo">TODO</string>
    <string name="imageRantingSakura">TODO</string>
    <string name="imageSakuraGugur">TODO</string>
    <string name="bungaBiru">TODO</string>
    <string name="imageSakuraKuning">TODO</string>
    <string name="textInformasiPuskesmas">Informasi Puskesmas</string>
    <string name="textTambahDataPasien">Tambah Data Pasien</string>
    <string name="textDaftarPasien">Daftar Pasien</string>
    <string name="textProfile">PROFILE</string>
    <string name="textInformasi">Informasi Puskesmas</string>
    <string name="iconEdit">TODO</string>
    <string name="iconDelete">TODO</string>
    <string name="textJudul">Masukan Judul</string>
    <string name="textAlamat">Masukkan Alamat</string>
    <string name="textMasukkanData">TAMBAH DATA PASIEN</string>
    <string name="buttonUpdate">UPDATE</string>
    <string name="buttonSave">SAVE</string>
    <string name="textMasukkanNama">Masukkan Nama</string>
    <string name="editRiwayatPenyakit">Riwayat Penyakit</string>
    <string name="editAlamat">Masukkan Alamat</string>
    <string name="editJudul">Masukkan Judul</string>
    <string name="editNama">Masukkan Nama</string>
    <string name="editJK">Masukkan Jenis Kelamin</string>
    <string name="editRiwayat">Masukkan Riwayat Penyakit</string>
    <string name="editTTL">Masukkan Tanggal Lahir</string>
    <string name="textDaftar">DAFTAR PASIEN</string>
    <string name="icon_Edit">TODO</string>
    <string name="icon_Delete">TODO</string>
    <string name="buttonHomeSave">Home</string>
    <string name="buttonHomeUpdate">Home</string>
    <string name="textJudulTambahData">Judul</string>
    <string name="textNamaTambahData">Nama</string>
    <string name="textTTLTambahData">Tanggal Lahir</string>
    <string name="textAlamatTambahData">Alamat</string>
    <string name="textJKTambahData">Jenis Kelamin</string>
    <string name="textPenyakit">Penyakit</string>
    <string name="textInformasiPuskes">Puskesmas Aisyiyah merupakan salah satu instansi yang berkomitmen pada kesehatan dalam kaitannya dengan perawatan dan pengobatan pasien. Puskesmas Aisyiyah juga menawarkan obat untuk pasien yang dirawat di Puskesmas. Puskesmas Aisyiyah memiliki bagian farmasi, dan bagian farmasi ini merupakan tempat pengambilan obat untuk pasien yang dirawat. Puskesmas Aisyiyah merupakan instansi yang bertanggung jawab dalam hal pengadaan, pemesanan, penyimpanan, pencatatan dan pemberitahuan penyerahan obat.</string>
    <string name="imageTulipColor">TODO</string>
    <string name="imageTulipBunga">TODO</string>
    <string name="imageRmhSkt">TODO</string>
    <string name="imageClouddy">TODO</string>
    <string name="imageSunny">ImageSunny</string>
    <string name="imageHospital">TODO</string>
    <string name="textPuskes">Puskesmas Aisyiyah</string>
    <string name="imageAwanBiru">TODO</string>
    <string name="imageGrassTulip">TODO</string>
    <string name="imageSakura">TODO</string>
    <string name="imageKupuPink">TODO</string>
    <string name="imageKupuUngu">TODO</string>
    <string name="imageRumputKuning">TODO</string>
    <string name="imageSakuraKanan">TODO</string>
    <string name="imageSakuraKiri">TODO</string>
    <string name="imageBurung">TODO</string>
    <string name="imageBungaKuning">TODO</string>

</resources>